@startuml

title __MYAPPLICATIONDFSD.APP's Class Diagram__\n

  namespace com.example.myapplicationdfsd {
    class com.example.myapplicationdfsd.BuildConfig {
    }
  }
  

  namespace com.example.myapplicationdfsd {
    class com.example.myapplicationdfsd.MainActivity {
    }
  }
  

  namespace com.example.myapplicationdfsd {
    class com.example.myapplicationdfsd.PeerConnectionAdapter {
    }
  }
  

  namespace com.example.myapplicationdfsd {
    class com.example.myapplicationdfsd.SdpAdapter {
    }
  }
  

  namespace com.example.myapplicationdfsd {
    class com.example.myapplicationdfsd.SignalingClient {
    }
  }
  

  com.example.myapplicationdfsd.MainActivity .up.|> com.example.myapplicationdfsd.SignalingClient.Callback
  com.example.myapplicationdfsd.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.myapplicationdfsd.MainActivity o-- org.webrtc.EglBase.Context : eglBaseContext
  com.example.myapplicationdfsd.MainActivity o-- org.webrtc.SurfaceViewRenderer : localView
  com.example.myapplicationdfsd.MainActivity o-- org.webrtc.MediaStream : mediaStream
  com.example.myapplicationdfsd.MainActivity o-- org.webrtc.PeerConnectionFactory : peerConnectionFactory
  com.example.myapplicationdfsd.PeerConnectionAdapter .up.|> org.webrtc.PeerConnection.Observer
  com.example.myapplicationdfsd.SdpAdapter .up.|> org.webrtc.SdpObserver
  com.example.myapplicationdfsd.SignalingClient o-- com.example.myapplicationdfsd.SignalingClient.Callback : callback


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
